fix: description overflowed when too long

--- a/src/css/Item.css
+++ b/src/css/Item.css
@@ -6,8 +6,16 @@
   gap: 1rem;
 }
 
+
 .item-img {
   width: 60%;
+}
+
+.item-description {
+  padding: 0.5rem;
+  text-align: center;
+  word-wrap: wrap;
+  word-break: break-all;
 }
 
 .add-to-cart-button {
